@@ -744,7 +744,7 @@
       <builtin_function name="base">
         <_title>Number Base</_title>
         <_names>r:base</_names>
-        <_description>Returns an value from an expression using a specified base between 2 and 36</_description>
+        <_description>Returns an value from an expression using the specified number base (radix). For integer bases between 2 and 36 full mathematical expressions (including operators and functions) are supported, while for other bases the specified expression is converted to a single number.&#10;&#10;Bases ≤ 36 uses digits 0-9 and A-Z (case insensitive).&#10;&#10;Bases between 37 and 62 uses case sensitive letters (0-9, a-z, A-Z) as digits ('Z' equals 61).&#10;&#10;Bases over 62 use Unicode characters as digits, with the character code as value (e.g. '0' equals 48). Escaped characters are in this case supported (e.g. '\0' = 0, '\523' = 523, '\x7f' = 127).&#10;&#10;Non-integer bases are allowed. Negative bases uses the same digits as the corresponding positive bases.</_description>
         <argument index="1">
           <_title>Number</_title>
         </argument>
