@@ -1,3 +1,9 @@
+2019-06-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add support for bases > 36, negative bases, and non-integer bases, in base() function
+	* Remove replacements (not updated properly) for obsolete currencies
+	* Fix parsing of "0x80 mod 3" and similar
+
 2019-06-11 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* dBm and dBW units
